device remove and device list api created
